# roller-coaster-data-analysis

./: analysis.ipynb  cleaning.ipynb  main.ipynb  pyproject.toml
data/: coaster_db-cleaned.arrow  coaster_db-cleaned.csv
