[tool.poetry]
name = "roller-coaster-data-analysis"
version = "0.1.0"
description = ""
authors = ["Daffa Ilhami <mdaffailhami@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.9.0"
altair = "^5.4.1"
vega-datasets = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
